feat: add google optimzer

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
       })(window, document, "script", "dataLayer", "GTM-MMPX2CQ");
     </script>
     <!-- End Google Tag Manager -->
+
+    <!--Google Optimizer -->
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-M56T3GD"></script>
+    <!-- End Google Optimizer -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
